@@ -1,5 +1,6 @@
 package com.nhnacademy.book_server.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nhnacademy.book_server.dto.BookInfoDto;
 import com.nhnacademy.book_server.dto.BookResponse;
 import com.nhnacademy.book_server.dto.request.BookUpdateRequest;
@@ -7,14 +8,15 @@ import com.nhnacademy.book_server.dto.response.GetBookResponse;
 import com.nhnacademy.book_server.entity.*;
 import com.nhnacademy.book_server.exception.BusinessException;
 import com.nhnacademy.book_server.exception.ErrorCode;
+import com.nhnacademy.book_server.feign.OrderFeignClient;
 import com.nhnacademy.book_server.mapper.CategoryMapper;
 import com.nhnacademy.book_server.repository.*;
 import com.nhnacademy.book_server.repository.review.ReviewRepository;
 import com.nhnacademy.book_server.service.search.ElasticService;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.annotation.Lazy;
@@ -24,7 +26,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.jdbc.core.BatchPreparedStatementSetter;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
@@ -42,20 +43,22 @@ import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 @Transactional
 public class BookService {
-
-    private static final String BEST_SELLER_KEY = "best_seller";
 
     private final BookRepository bookRepository;
     private final PublisherRepository publisherRepository;
     private final AuthorRepository authorRepository;
     private final BookAuthorRepository bookAuthorRepository;
     private final StringRedisTemplate redisTemplate;
+    private final ObjectMapper objectMapper;
     private final ReviewRepository reviewRepository;
     private final BookReviewAiRepository bookReviewAiRepository;
     private final ElasticService elasticService;
     private final BookLikeRepository bookLikeRepository;
+
+    private final OrderFeignClient orderFeignClient;
     private final CategoryRepository categoryRepository;
     private final BookCategoryRepository bookCategoryRepository;
 
@@ -64,36 +67,9 @@ public class BookService {
 
     private final JdbcTemplate jdbcTemplate;
 
-    private final BookService self;
-
+    @Lazy
     @Autowired
-    public BookService(BookRepository bookRepository,
-                       PublisherRepository publisherRepository,
-                       AuthorRepository authorRepository,
-                       BookAuthorRepository bookAuthorRepository,
-                       StringRedisTemplate redisTemplate,
-                       ReviewRepository reviewRepository,
-                       BookReviewAiRepository bookReviewAiRepository,
-                       ElasticService elasticService,
-                       BookLikeRepository bookLikeRepository,
-                       CategoryRepository categoryRepository,
-                       BookCategoryRepository bookCategoryRepository,
-                       JdbcTemplate jdbcTemplate,
-                       @Lazy BookService self) {
-        this.bookRepository = bookRepository;
-        this.publisherRepository = publisherRepository;
-        this.authorRepository = authorRepository;
-        this.bookAuthorRepository = bookAuthorRepository;
-        this.redisTemplate = redisTemplate;
-        this.reviewRepository = reviewRepository;
-        this.bookReviewAiRepository = bookReviewAiRepository;
-        this.elasticService = elasticService;
-        this.bookLikeRepository = bookLikeRepository;
-        this.categoryRepository = categoryRepository;
-        this.bookCategoryRepository = bookCategoryRepository;
-        this.jdbcTemplate = jdbcTemplate;
-        this.self = self;
-    }
+    private BookService self;
 
     public Book createBook(BookInfoDto dto) {
         if (bookRepository.existsByIsbn13(dto.getIsbn())) {
@@ -101,13 +77,11 @@ public class BookService {
         }
 
         Publisher publisher = null;
-        if (StringUtils.hasText(dto.getPublisher())) {
-            String publisherName = dto.getPublisher().trim();
-            publisher = publisherRepository.findByName(publisherName)
-                    .orElseGet(() -> publisherRepository.save(
-                            Publisher.builder().name(publisherName).build()
-                    ));
-        }
+        String publisherName = dto.getPublisher().trim();
+        publisher = publisherRepository.findByName(publisherName)
+                .orElseGet(() -> publisherRepository.save(
+                        Publisher.builder().name(publisherName).build()
+        ));
 
         Integer targetCategoryId = dto.getCategoryId();
         Category category = null;
@@ -115,6 +89,7 @@ public class BookService {
         if (targetCategoryId == null) {
             targetCategoryId = CategoryMapper.findCategoryId(dto.getTitle());
         }
+
         if (targetCategoryId != null) {
             category = categoryRepository.findByCategoryId(targetCategoryId).orElse(null);
         }
@@ -122,7 +97,6 @@ public class BookService {
         String publishedDateStr = (dto.getPublishedDate() != null)
                 ? dto.getPublishedDate().toString() // "2023-12-25" 형식으로 변환됨
                 : LocalDate.now().toString();
-
 
         Book newBook = Book.builder()
                 .isbn13(dto.getIsbn())
@@ -152,7 +126,7 @@ public class BookService {
                 Author author = authorRepository.findByName(trimmedName)
                         .orElseGet(() -> authorRepository.save(
                                 Author.builder().name(trimmedName).build()
-                        ));
+                ));
 
                 // BookAuthor 연결 관계 저장
                 BookAuthor bookAuthor = BookAuthor.builder()
@@ -165,6 +139,7 @@ public class BookService {
         }
 
         try {
+//            em.flush();
             em.refresh(savedBook);
             elasticService.saveAll(List.of(BookResponse.from(savedBook)));
             log.info("Elasticsearch 인덱싱 완료 (작가/카테고리 포함): {}", savedBook.getTitle());
@@ -184,9 +159,10 @@ public class BookService {
     }
 
     // 책 한권 조회
-// ----------------------------------------------------------------
+   // ----------------------------------------------------------------
     // 1. 책 상세 조회 (리팩토링)
-    // ----------------------------------------------------------------
+    // --------------------------------------------------------------
+
     @Transactional(readOnly = true)
     public BookResponse findBookById(Long id) {
         // [1] 조회수 증가는 캐싱과 상관없이 무조건 실행 (기존 RedisTemplate 사용)
@@ -222,16 +198,19 @@ public class BookService {
     // 2. 신간 추천 (리팩토링)
     // ----------------------------------------------------------------
     // key를 단순 문자열 'default'로 고정하여 하나의 리스트만 캐싱
-    @Cacheable(value = "newBooks", key = "'default_v2'")
+    @Cacheable(value = "newBooks", key = "'default'")
     @Transactional(readOnly = true)
     public List<BookResponse> getNewBooks() {
         log.info("캐시 없음! 신간 목록 DB 조회");
+
+        LocalDate start = LocalDate.of(2020, 1, 1);
+        LocalDate end = LocalDate.of(2025, 12, 31);
 
         List<Book> books = bookRepository.findTop5ByOrderByIdDesc();
 
         return books.stream()
                 .map(BookResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // 책 업데이트
@@ -248,7 +227,7 @@ public class BookService {
         if (StringUtils.hasText(request.getDescription())) book.setContent(request.getDescription()); // description -> content 매핑 주의
         if (request.getPrice() != null) book.setPrice(request.getPrice());
         if (StringUtils.hasText(request.getImage())) book.setImage(request.getImage());
-        if (request.getPublishedDate() != null) book.setPublishedDate(request.getPublishedDate());
+        if (request.getPublishedDate() != null) book.setPublishedDate(request.getPublishedDate().toString());
 
         if (StringUtils.hasText(request.getPublisher())) {
             Publisher publisher = publisherRepository.findByName(request.getPublisher())
@@ -298,7 +277,7 @@ public class BookService {
                         book.getPrice(),
                         book.getImage()                // 이미지
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void incrementViewCount(Long bookId) {
@@ -330,6 +309,7 @@ public class BookService {
         return ChronoUnit.SECONDS.between(now, midnight);
     }
 
+    // 주간 인기 급상승 로직
 //    // @Scheduled(cron = "0 0 0 * * *")    // 조회수를 카운트 하는 로직이 매시간 반영
     @Transactional(readOnly = true)
     public List<BookResponse> getWeeklyPopularBooks(int limit) {
@@ -343,21 +323,27 @@ public class BookService {
         }
 
         if (!recentKeys.isEmpty()) {
+
+            // 1. 레디스 키 생성 -> 과거 7일치의 '일간 랭킹' 키를 생성하기 위해
             // 첫 번째 키를 기준으로 나머지 키들과 합산
-            String firstKey = recentKeys.getFirst();
+            String firstKey = recentKeys.get(0);
             List<String> otherKeys = recentKeys.subList(1, recentKeys.size());
 
+            // 2. 일간 랭킹 ZSet을 연산하여 새로운 키에 점수를 합산
             if (otherKeys.isEmpty()) {
                 // 키가 하나뿐이면 그냥 복사하거나 그대로 사용 (여기선 생략 가능하지만 안전하게 복사)
                 redisTemplate.opsForZSet().unionAndStore(firstKey, Collections.emptyList(), weeklyKey);
-            } else {
+            }
+
+            else {
                 redisTemplate.opsForZSet().unionAndStore(firstKey, otherKeys, weeklyKey);
             }
             // 계산된 키는 10분 정도만 유지 (잦은 연산 방지)
             redisTemplate.expire(weeklyKey, Duration.ofMinutes(10));
         }
 
-        Set<String> topBookIds = redisTemplate.opsForZSet().reverseRange(weeklyKey, 0, (long) limit - 1);
+        // 점수가 높은순으로 10개 가져옴
+        Set<String> topBookIds = redisTemplate.opsForZSet().reverseRange(weeklyKey, 0, limit - 1);
 
         if (topBookIds == null || topBookIds.isEmpty()) {
             return List.of();
@@ -365,7 +351,9 @@ public class BookService {
 
         List<Long> bookIds = topBookIds.stream()
                 .map(Long::valueOf)
-                .toList();
+                .collect(Collectors.toList());
+
+        // DB 조회 -> 가져온 아이디들을 이용해 데이터베이스에서 도서 정보 조회함
 
         // 2. [수정됨] Redis가 알려준 ID로 DB 조회 (findAllById 사용)
         List<Book> books = bookRepository.findAllById(bookIds);
@@ -380,29 +368,26 @@ public class BookService {
                 .map(bookMap::get)
                 .filter(Objects::nonNull)
                 .map(BookResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
     @Transactional(readOnly = true)
     public List<BookResponse> getBestSeller(int limit) {
+        String cacheKey = "best_seller";
 
-        //Redis의 ZSet은 기본적으로 점수가 낮은 순서(오름차순)로 정렬되어 저장되는데
+        // Redis의 ZSet은 기본적으로 점수가 낮은 순서(오름차순)로 정렬되어 저장되는데
         // zset의 순서를 바꿈
+        Set<String> BestBookIds = redisTemplate.opsForZSet().reverseRange("best_seller", 0, limit - 1);
 
-        Set<String> bestBookIds = redisTemplate.opsForZSet().reverseRange(BEST_SELLER_KEY, 0, (long) limit - 1);
-
-        if (bestBookIds == null || bestBookIds.isEmpty()) {
-            log.warn("Redis 베스트셀러 캐시가 비어있습니다. DB에서 즉시 조회합니다.");
-            return bookRepository.findByOrderBySalesVolumeDesc(PageRequest.of(0, limit))
-                    .stream()
-                    .map(BookResponse::from)
-                    .toList();
+        if (BestBookIds == null || BestBookIds.isEmpty()) {
+            return List.of();
         }
 
-        List<Long> bookIds = bestBookIds.stream()
+        // 책 아이디를 가져와서
+        List<Long> bookIds = BestBookIds.stream()
                 .map(Long::valueOf)
-                .toList();
+                .collect(Collectors.toList());
 
         // 2. DB에서 책 정보 조회 (순서 보장 안됨)
         List<Book> books = bookRepository.findAllById(bookIds);
@@ -417,15 +402,23 @@ public class BookService {
                 .map(bookMap::get)
                 .filter(Objects::nonNull) // DB에 삭제된 책이 있을 경우 대비
                 .map(BookResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public void incrementBestSellerScore(Long bookId, Integer quantity) {
+        String key = "best_seller";
+
         Book book = bookRepository.findById(bookId)
-                        .orElseThrow(() -> new BusinessException(ErrorCode.BOOK_NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ErrorCode.BOOK_NOT_FOUND));
         book.setSalesVolume(book.getSalesVolume() + quantity);
-        log.info("베스트셀러 점수 갱신 완료: bookId={}, quantity={}", bookId, quantity);
+
+        try {
+            redisTemplate.opsForZSet().incrementScore(key, String.valueOf(bookId), quantity.doubleValue());
+            log.info("베스트셀러 점수 갱신 완료: bookId={}, quantity={}", bookId, quantity);
+        } catch (Exception e) {
+            log.error("Redis 점수 갱신 실패 (주문은 계속 진행됨): bookId={}", bookId, e);
+        }
     }
 
     @Transactional(readOnly = true)
@@ -453,7 +446,7 @@ public class BookService {
     }
 
     public void unlike(Long bookId, Long memberId) {
-        if (memberId == null) throw new BusinessException(ErrorCode.MEMBER_INFO_NOT_FOUND);
+        if (memberId == null) throw new RuntimeException("회원 정보가 없습니다.");
 
         // 존재 여부 확인 후 삭제
         if (bookLikeRepository.existsByBook_IdAndMemberId(bookId, memberId)) {
@@ -461,7 +454,7 @@ public class BookService {
         }
 
         else {
-            throw new BusinessException(ErrorCode.BOOK_LIKE_NOT_FOUND);
+            throw new RuntimeException("삭제할 좋아요 기록이 없습니다.");
         }
     }
 
@@ -490,93 +483,56 @@ public class BookService {
                 break;
             }
 
-            List<Object[]> batchArgs = createBatchArgs(targetBooks, categoryMap);
-            saveBatch(batchArgs, lastId, totalProcessed);
+            List<Object[]> batchArgs = new ArrayList<>();
+            List<BookCategory> bookCategories=new ArrayList<>();
+
+            for (Book book : targetBooks) {
+                Integer matchedId = CategoryMapper.findCategoryId(book.getTitle());
+
+
+                if (matchedId != null && categoryMap.containsKey(matchedId)) {
+                    batchArgs.add(new Object[]{book.getId(), matchedId});
+                }
+
+                int parentId = CategoryMapper.getParentId(matchedId);
+
+                if (parentId != 0 && categoryMap.containsKey(parentId)) {
+                    batchArgs.add(new Object[]{book.getId(), parentId});
+                }
+
+//                Integer childId=categoryRepository.findByChildId(matchedId);
+
+                // [핵심] 다음 조회를 위해 마지막 ID를 기억합니다.
+                lastId = book.getId();
+            }
 
             // DB 저장 (트랜잭션 없이 JDBC 바로 실행 -> 자동 커밋됨)
             if (!batchArgs.isEmpty()) {
-                totalProcessed += batchArgs.size();
+                try {
+                    String sql = "INSERT INTO book_category (book_id, category_id) VALUES (?, ?)";
+                    jdbcTemplate.batchUpdate(sql, new BatchPreparedStatementSetter() {
+                        @Override
+                        public void setValues(PreparedStatement ps, int i) throws SQLException {
+                            Object[] args = batchArgs.get(i);
+                            ps.setLong(1, (Long) args[0]);
+                            ps.setInt(2, (Integer) args[1]);
+                        }
+                        @Override
+                        public int getBatchSize() {
+                            return batchArgs.size();
+                        }
+                    });
+                    totalProcessed += batchArgs.size();
+                    log.info("▷ {}권 저장 성공! (마지막 ID: {}, 누적: {}권)", batchArgs.size(), lastId, totalProcessed);
+                } catch (Exception e) {
+                    log.error("❌ 저장 중 에러 발생 (계속 진행함): {}", e.getMessage());
+                }
+            } else {
+                // 매핑된 게 없어도 lastId가 갱신되었으므로 무한 루프에 빠지지 않습니다.
+                log.info("⚠️ 이번 배치({}권)에서는 매칭된 카테고리가 없습니다. (진행 중...)", targetBooks.size());
             }
-            lastId = targetBooks.getLast().getId();
         }
 
         log.info("============== [마이그레이션 정상 종료] ==============");
-    }
-
-    /**
-     * 조회된 책 목록을 배치 처리를 위한 인자 목록으로 변환합니다.
-     */
-    private List<Object[]> createBatchArgs(List<Book> books, Map<Integer, Integer> categoryMap) {
-        List<Object[]> batchArgs = new ArrayList<>();
-
-        for (Book book : books) {
-            addCategoryMapping(batchArgs, book, categoryMap);
-        }
-        return batchArgs;
-    }
-
-    /**
-     * 개별 책에 대한 카테고리 매핑 정보를 추출하여 리스트에 추가합니다.
-     */
-    private void addCategoryMapping(List<Object[]> batchArgs, Book book, Map<Integer, Integer> categoryMap) {
-        Integer matchedId = CategoryMapper.findCategoryId(book.getTitle());
-
-        if (matchedId != null && categoryMap.containsKey(matchedId)) {
-            batchArgs.add(new Object[]{book.getId(), matchedId});
-        }
-
-        int parentId = CategoryMapper.getParentId(matchedId);
-        if (parentId != 0 && categoryMap.containsKey(parentId)) {
-            batchArgs.add(new Object[]{book.getId(), parentId});
-        }
-    }
-
-    /**
-     * 생성된 배치 데이터를 DB에 저장합니다.
-     */
-    private void saveBatch(List<Object[]> batchArgs, Long lastId, int currentTotal) {
-        if (batchArgs.isEmpty()) {
-            log.info("⚠️ 이번 배치에서는 매칭된 카테고리가 없습니다. (진행 중...)");
-            return;
-        }
-
-        try {
-            String sql = "INSERT INTO book_category (book_id, category_id) VALUES (?, ?)";
-            jdbcTemplate.batchUpdate(sql, new BatchPreparedStatementSetter() {
-                @Override
-                public void setValues(@NonNull PreparedStatement ps, int i) throws SQLException {
-                    Object[] args = batchArgs.get(i);
-                    ps.setLong(1, (Long) args[0]);
-                    ps.setInt(2, (Integer) args[1]);
-                }
-
-                @Override
-                public int getBatchSize() {
-                    return batchArgs.size();
-                }
-            });
-            log.info("▷ {}권 저장 성공! (마지막 ID: {}, 누적: {}권)", batchArgs.size(), lastId, currentTotal + batchArgs.size());
-        } catch (Exception e) {
-            log.error("❌ 저장 중 에러 발생 (계속 진행함): {}", e.getMessage());
-        }
-    }
-
-    @Scheduled(cron = "0 0 0 * * *")
-    public void updateBestSellerCache(){
-        log.info("베스트셀러 집계 시작 (매일 자정)");
-        List<Book> bestSellers = bookRepository.findByOrderBySalesVolumeDesc(PageRequest.of(0, 10));
-
-        if (bestSellers.isEmpty()) {
-            log.info("판매된 도서가 없어 베스트셀러를 갱신하지 않습니다.");
-            return;
-        }
-
-        redisTemplate.delete(BEST_SELLER_KEY);
-
-        for (Book book : bestSellers) {
-            redisTemplate.opsForZSet().add(BEST_SELLER_KEY,String.valueOf(book.getId()), book.getSalesVolume().doubleValue());
-        }
-
-        log.info("베스트셀러 집계 및 Redis 갱신 완료. 총 {}권", bestSellers.size());
     }
 }
